--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,10 @@ body{
   font-family: "Inter", sans-serif;
 
 }
+header{
+  z-index:10001 !important;
+}
+
+.btn-primary{
+  @apply px-7 py-2 text-white rounded hover:bg-neutralDGrey transition-all duration-300 hover:-translate-y-4 bg-brandPrimary mt-8
+}
